--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,3 +34,4 @@ uuid = { version = "1.18.1", features = ["serde", "v7"] }
 tauri-plugin-process = "2"
 tauri-plugin-updater = "2"
 walkdir = "2"
+zip = { version = "2", default-features = false, features = ["deflate"] }
